--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   "dependencies": {
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.3"
+    "@bizarro/lyserg": "git+https://bizarro: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@github.com/11th-dimension/lyserg.git",
+    "next": "14.0.3",
+    "sass": "^1.59.3"
   },
   "devDependencies": {
     "eslint": "^8",
