--- a/package.json
+++ b/package.json
@@ -1,31 +1,31 @@
 {
-  "name": "bigb-studio",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "slicemachine": "start-slicemachine"
-  },
-  "dependencies": {
-    "@bigbstudio/blazer": "git+https://github.com/bigbstudio/blazer.git",
-    "@prismicio/client": "^7.3.1",
-    "@prismicio/helpers": "^2.3.9",
-    "@prismicio/next": "^1.5.0",
-    "@prismicio/react": "^2.7.3",
-    "@prismicio/types": "^0.2.8",
-    "include-media": "^2.0.0",
-    "next": "14.0.3",
-    "react": "^18",
-    "react-dom": "^18",
-    "sass": "^1.59.3"
-  },
-  "devDependencies": {
-    "@slicemachine/adapter-next": "^0.3.27",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.3",
-    "slice-machine-ui": "^1.21.1"
-  }
+	"name": "bigb-studio",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"slicemachine": "start-slicemachine"
+	},
+	"dependencies": {
+		"@prismicio/client": "^7.3.1",
+		"@prismicio/helpers": "^2.3.9",
+		"@prismicio/next": "^1.5.0",
+		"@prismicio/react": "^2.7.3",
+		"@prismicio/types": "^0.2.8",
+		"@thebigbstudio/blazer": "git+https://oauth2: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@github.com/bigbstudio/blazer.git",
+		"include-media": "^2.0.0",
+		"next": "14.0.3",
+		"react": "^18",
+		"react-dom": "^18",
+		"sass": "^1.59.3"
+	},
+	"devDependencies": {
+		"@slicemachine/adapter-next": "^0.3.27",
+		"eslint": "^8",
+		"eslint-config-next": "14.0.3",
+		"slice-machine-ui": "^1.21.1"
+	}
 }
