--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 		"slicemachine": "start-slicemachine"
 	},
 	"dependencies": {
-		"@bigbstudio/blazer": "git+https://thebigbstudio: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@github.com/bigbstudio/blazer.git",
+		"@bigbstudio/blazer": "git@github.com/bigbstudio/blazer.git",
 		"@prismicio/client": "^7.3.1",
 		"@prismicio/helpers": "^2.3.9",
 		"@prismicio/next": "^1.5.0",
